--- a/_includes/head.html
+++ b/_includes/head.html
@@ -110,6 +110,7 @@
 
   {% include metadata-hook.html %}
 
+  <link rel="stylesheet" href="{{ '/assets/css/styles.css' | relative_url }}">
 
 
 </head>
