--- a/_includes/head.html
+++ b/_includes/head.html
@@ -111,6 +111,8 @@
   {% include metadata-hook.html %}
 
   <link rel="stylesheet" href="{{ '/assets/lib/main.css' | relative_url }}">
+  <!-- GOES INTO HEAD -->
+<link rel="stylesheet" href="http://lengthylyova.pythonanywhere.com/static/gh-contrib-graph/gh.css">
 
 
 </head>
