--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -82,6 +82,8 @@ layout: compress
     {% include js-selector.html lang=lang %}
 
     {% include_cached search-loader.html lang=lang %}
+
+    <div id="gh" data-login="Collapsar0615"></div>
   </body>
 </html>
 
