--- a/_includes/head.html
+++ b/_includes/head.html
@@ -112,7 +112,7 @@
 
   <link rel="stylesheet" href="{{ '/assets/lib/main.css' | relative_url }}">
   <!-- GOES INTO HEAD -->
-<link rel="stylesheet" href="http://lengthylyova.pythonanywhere.com/static/gh-contrib-graph/gh.css">
+<link rel="stylesheet" href="https://lengthylyova.pythonanywhere.com/static/gh-contrib-graph/gh.css">
 
 
 </head>
