--- a/assets/css/jekyll-theme-chirpy.scss
+++ b/assets/css/jekyll-theme-chirpy.scss
@@ -34,11 +34,11 @@ blockquote[class^='prompt-']{
 
 /* 侧边栏背景图片添加 */
 #sidebar {
-    background-image: url(/assets/img/background1.jpg); /* <- change background image */
+    background-image: url(/assets/img/background.jpg); /* <- change background image */
     background-size: cover; /* <- customize the image size */
     background-repeat: no-repeat; /* <- no-repeat */
     background-position: top; /* <- image position */
- padding-top:  100px; /* 根据需要调整像素值 */
+ padding-top:  300px; /* 根据需要调整像素值 */
 }
 
 #sidebar .site-title a {
